# AdventofAgents

./: .gitignore  README.md  test_calendar_tool.py
calendar_agent/: __main__.py  a2ui_schema.py  agent.py  agent_executor.py  calendar_tools.py  pyproject.toml  requirements.txt
calendar_agent_a2a/: __main__.py  agent.py  agent_executor.py  pyproject.toml
docs/: A2A_INTEGRATION_STATUS.md  A2UI_INTEGRATION.md  DEPLOYMENT.md  MULTI_AGENT_ORCHESTRATION.md
first_agent/: root_agent.yaml
orchestrator_agent/: a2a_server.py  agent.py  agent_executor.py  pyproject.toml  rest_server.py  root_agent.yaml  server.py
react-client/: README.md  package-lock.json  package.json  vitest.config.ts
react-client/src/: App.tsx  index.css
react-client/src/components/a2ui/: A2UIRenderer.test.tsx  A2UIRenderer.tsx
react-client/src/components/anam/: AnamAvatar.tsx
react-client/src/components/ui/: button.tsx
tests/: test_a2ui_schema.py
vehicle_intake_agent/: a2ui_schema.py  agent.py  root_agent.yaml
